--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ social:
     - icon: fa-stack-exchange
       link: "#"
     - icon: fa-github
-      link: "https://github.com/agusmakmun"
+      link: "https://github.com/jsstar522"
 
 share:
   twitter_username: 
