--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,8 @@ urls:
       url: /about/
     - text: My Projects
       url: /projects/
+		- text: Test
+			url: /test/
 #     - text: XML Feed
 #       url: /feed.xml
 
