--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ urls:
     - text: My Projects
       url: /projects/
     - text: Test
-      url: /test/
+      url: /category/python
 #     - text: XML Feed
 #       url: /feed.xml
 
