--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ share:
 urls:
     - text: About Me
       url: /about/
-			- children: aaa
+      children: aaa
     - text: My Projects
       url: /projects/
     - text: 파이썬
