--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,8 @@ share:
 urls:
     - text: About Me
       url: /about/
-      children: aaa
+      children: - aaa
+                - bbb
     - text: My Projects
       url: /projects/
     - text: 파이썬
