--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ share:
 urls:
     - text: About Me
       url: /about/
-      children: - aaa
-                - bbb
+      children: 
+              - aaa
     - text: My Projects
       url: /projects/
     - text: 파이썬
