--- a/_config.yml
+++ b/_config.yml
@@ -34,18 +34,17 @@ urls:
     - text: Post
       url: /
       children:
-              - text: aaa
-                url: /
-              - text: bbb
-                url: /
+              - text: 딥러닝
+                url: /category/deeplearning
+              - text: 물리학
+                url: /category/physics
+              - text: 웹개발
+                url: /category/webdev
+                
     - text: About Me
       url: /about/
 #     - text: My Projects
 #       url: /projects/
-    - text: 파이썬
-      url: /category/python
-    - text: 지킬
-      url: /category/jekyll
 
 url: ""
 baseurl: ""
