--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: js_star_blog
-description: js_star's blog
-author: jsstar522
+title: js_star Blog
+description: js_star blog
+author: 기억보단 기록에 의존한다 
 github: https://github.com/jsstar522
 about: Machine Learning, Web Dev, Physics, etc...
 disqus_shortname: stackproblems
