--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: js_star Blog
+title: JS Star 블로그
 description: js_star blog
-author: 기억보단 기록에 의존한다 
+author: JS Star 블로그
 github: https://github.com/jsstar522
-about: Machine Learning, Web Dev, Physics, etc...
+about: 머신러닝, 웹개발, 물리학에 관심이 많습니다.
 disqus_shortname: stackproblems
 google_analytics: 
 
