--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: JS Star 블로그
 description: js_star blog
 author: JS Star 블로그
 github: https://github.com/jsstar522
-about: 기억보다는 기록을🖍 ⭐️ 머신러닝, 웹개발, 물리학을 공부했고 계속 배워가고 있습니다 ⭐️
+about: 기억보다는 기록을🖍 머신러닝, 웹개발, 물리학을 공부했고 계속 배워가고 있습니다 ⭐️ 기존에 포스팅하던 블로그에서 포스트를 옮기는 중입니다 ⭐️
 disqus_shortname: stackproblems
 google_analytics: 
 
