--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ urls:
                 url: /category/kaggle
               - text: 알고리즘
                 url: /category/algorithm
+              - text: ""
+                url: ""
               - text: 파이썬
                 url: /category/python
               - text: 물리학
